[project]
name = "extension-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tabinohito", email = "tako.taro.tf@tut.jp" }
]
dependencies = [
    "websocket-client==1.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/extension_py"]
